--- a/benchmark/templates/benchmark/bank_list.html
+++ b/benchmark/templates/benchmark/bank_list.html
@@ -59,4 +59,17 @@
     </div>
 </div>
 
+<!-- Floating Button -->
+<div class="fixed-action-btn">
+    <a href="{% url 'bank_add' %}" class="btn-floating red">
+        <i class="large fas fa-pen"></i>
+    </a>
+    <!-- <ul>
+        <li><a class="btn-floating red"><i class="material-icons"></i></a></li>
+        <li><a class="btn-floating yellow darken-1"><i class="material-icons"></i></a></li>
+        <li><a class="btn-floating green"><i class="material-icons"></i></a></li>
+        <li><a class="btn-floating blue"><i class="material-icons"></i></a></li>
+    </ul> -->
+</div>
+
 {% endblock %}
