--- a/benchmark/templates/benchmark/bank_form.html
+++ b/benchmark/templates/benchmark/bank_form.html
@@ -26,7 +26,7 @@
                             <thead>
                                 <tr>
                                     {% for field in form.visible_fields %}
-                                    <th>{{ field.label|capfirst }}</th>
+                                    <th>{{ field.label }}</th>
                                     {% endfor %}
                                 </tr>
                             </thead>
