--- a/benchmark/templates/benchmark/bank_list.html
+++ b/benchmark/templates/benchmark/bank_list.html
@@ -61,8 +61,8 @@
 
 <!-- Floating Button -->
 <div class="fixed-action-btn">
-    <a href="{% url 'bank_add' %}" class="btn-floating red">
-        <i class="large fas fa-pen"></i>
+    <a href="{% url 'bank_add' %}" class="btn-floating btn-large waves-effect waves-light red">
+        <i class="fas fa-pen"></i>
     </a>
     <!-- <ul>
         <li><a class="btn-floating red"><i class="material-icons"></i></a></li>
