--- a/benchmark/templates/benchmark/bank_form.html
+++ b/benchmark/templates/benchmark/bank_form.html
@@ -8,70 +8,60 @@
     }
 </style>
 
-<div class="container expand-on-small-only">
-    <div class="row">
-        <div class="col s12 m12 l10 offset-l1">
-            <div class="card">
-                <form method="POST" enctype="multipart/form-data">{% csrf_token %}
-                    <div class="card-content">
-                        <span class="card-title grey-text text-darken-2">Bank Form</span>
-                        {% form form=form %}
-                        {% endform %}
+<!-- Breadcrumbs -->
+<nav id="breadcrumb">
+    <div class="nav-wrapper">
+        <div class="col s12">
+            <a href="{% url 'home' %}" class="breadcrumb"><i class="fas fa-home"></i></a>
+            <a href="{% url 'bank_list' %}" class="breadcrumb">Bank</a>
+            <a href="#!" class="breadcrumb">Add</a>
+        </div>
+    </div>
+</nav>
 
-                        <table class="table">
-                            {{ bankindicators.management_form }}
+<!-- Section -->
+<section>
+    <div class="container expand-on-small-only">
+        <div class="row">
+            <div class="col s12 m12 l10 offset-l1">
+                <div class="card">
+                    <form method="POST" enctype="multipart/form-data">{% csrf_token %}
+                        <div class="card-content">
+                            <span class="card-title grey-text text-darken-2">Bank Form</span>
+                            {% form form=form %}
+                            {% endform %}
 
-                            {% for form in bankindicators.forms %}
-                            {% if forloop.first %}
-                            <thead>
-                                <tr>
-                                    {% for field in form.visible_fields %}
-                                    <th>{{ field.label }}</th>
-                                    {% endfor %}
-                                </tr>
-                            </thead>
-                            {% endif %}
-                            <tr class="formset_row">
-                                {% for field in form.visible_fields %}
-                                <td>
-                                    {# Include the hidden fields in the form #}
-                                    {% if forloop.first %}
-                                    {% for hidden in form.hidden_fields %}
-                                    {{ hidden }}
-                                    {% endfor %}
-                                    {% endif %}
-                                    {{ field.errors.as_ul }}
-                                    {{ field }}
-                                </td>
-                                {% endfor %}
-                            </tr>
-                            {% endfor %}
-                        </table>
-                    </div>
-
-                    <div class="card-action">
-                        <div class="right-align">
-                            <button class="waves-effect waves-light btn-small red" type="reset">Reset
-                                <i class="fas fa-undo"></i>
-                            </button>
-                            <button class="waves-effect waves-light btn-small" type="submit">Submit
-                                <i class="fas fa-paper-plane"></i>
-                            </button>
                         </div>
-                    </div>
-                </form>
+
+                        <div class="card-action">
+                            <div class="right-align">
+                                <button class="waves-effect waves-light btn-small red" type="reset">Reset
+                                    <i class="fas fa-undo"></i>
+                                </button>
+                                <button class="waves-effect waves-light btn-small" type="submit">Submit
+                                    <i class="fas fa-paper-plane"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</section>
 
-<script src="{% static 'js/jquery.formset.js' %}"></script>
-<script type="text/javascript">
-    $('.formset_row').formset({
-        addText: 'add family member',
-        deleteText: 'remove',
-        prefix: 'familymember_set'
-    });
-</script>
+
+<!-- Floating Button -->
+<div class="fixed-action-btn">
+    <a href="{% url 'bank_add' %}" class="btn-floating btn-large waves-effect waves-light red">
+        <i class="fas fa-pen"></i>
+    </a>
+    <ul>
+        <li><a class="btn-floating yellow"><i class="material-icons"></i></a></li>
+        <li><a class="btn-floating amber"><i class="material-icons"></i></a></li>
+        <li><a class="btn-floating orange"><i class="material-icons"></i></a></li>
+        <li><a class="btn-floating deep-orange"><i class="material-icons"></i></a></li>
+    </ul>
+</div>
 
 {% endblock %}
